refactor: reorganize tmux by action type

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,79 +1,53 @@
-#
 #               _________  _____ ______   ___  ___    ___    ___ 
 #              |\___   ___\\   _ \  _   \|\  \|\  \  |\  \  /  /|
 #              \|___ \  \_\ \  \\\__\ \  \ \  \\\  \ \ \  \/  / /
-#                   \ \  \ \ \  \\|__| \  \ \  \\\  \ \ \    / / 
-#                    \ \  \ \ \  \    \ \  \ \  \\\  \ \/    \/  
-#   'tmux/tmux'       \ \__\ \ \__\    \ \__\ \_______\/  /\  \  
-#                      \|__|  \|__|     \|__|\|_______/__/ /\__\ 
-#                                                     |__|/ \__| 
-#
-# cSpell:words nobold brightblack carlocab akohlbecker christoomey nhdaly spywhere wfxr
+#                   \ \  \ \ \  \\|__| \  \ \  \\\  \ \ \    / /
+#                    \ \  \ \ \  \    \ \  \ \  \\\  \ \/    \/
+#   'tmux/tmux'       \ \__\ \ \__\    \ \__\ \_______\/  /\  \
+#                      \|__|  \|__|     \|__|\|_______/__/ /\__\
+#                                                     |__|/ \__|
 
-bind-key x kill-pane            # skip "kill-pane 1? (y/n)" prompt (cmd+w)
-set -g base-index 1             # start indexing windows at 1 instead of 0
-set -g pane-base-index 1        # start indexing panes at 1 instead of 0
-set -g renumber-windows on      # renumber all windows when any window is closed
-set -g detach-on-destroy off    # don't exit from tmux when closing a session 
-set -g escape-time 0            # zero-out escape time delay
-set-option -g status-interval 1 # decrease interval timing
+set -g base-index 1              # start indexing windows at 1 instead of 0
+set -g detach-on-destroy off     # don't exit from tmux when closing a session 
+set -g escape-time 0             # zero-out escape time delay
+set -g history-limit 1000000     # significantly increase history size
+set -g mouse on                  # enable mouse support
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-base-index 1         # start indexing panes at 1 instead of 0
+set -g pane-border-style 'fg=brightblack,bg=default'
+set -g renumber-windows on       # renumber all windows when any window is closed
+set -g set-clipboard on          # use system clipboard
+set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -timeout 200ms -cfg $HOME/.config/tmux/gitmux.conf)' # session name
+set -g status-left-length 200    # increase status line length
+set -g status-position top       # macOS / darwin style
+set -g status-right ''           # empty
+set -g status-style 'bg=default' # transparent bg
+set -g window-status-current-format '#[fg=magenta,bold,bg=default]#W'
+set -g window-status-format         '#[fg=white,bg=default]#W'
 
-set -g status-position top                # macOS / darwin style
-set -g status-style 'bg=default,fg=white' # transparent bg with neutral text
+set-option -g  automatic-rename-format "#(tmux-icon-name #{pane_current_command})" # renames windows
+set-option -g  default-terminal    'screen-256color'
+set-option -g  status-interval     1 # decrease interval timing
+set-option -g terminal-overrides ',xterm-256color:RGB'
 
-set -g  status-left "#[fg=blue,bold]#S " # session name
-set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
-set -g  status-left-length 60
+bind %   split-window -c '#{pane_current_path}' # default is tmux session root 
+bind '"' split-window -c '#{pane_current_path}' # default is tmux session root 
+bind c   new-window   -c '#{pane_current_path}' # default is tmux session root 
+bind g   new-window   -c '#{pane_current_path}' -n '' lazygit
+bind h   select-pane  -L
+bind j   select-pane  -D
+bind k   select-pane  -U
+bind l   select-pane  -R
 
-set -g status-right ""
-
-# window styles
-set -g window-status-format "#[fg=white,bg=default]#W "
-set -g window-status-current-format "#[fg=magenta,bold,bg=default]#W "
-
-# pane styles
-set -g pane-border-style "fg=brightblack,bg=default"
-set -g pane-active-border-style "fg=magenta,bg=default"
-
-# custom keybindings
-bind g new-window -c "#{pane_current_path}" -n "" lazygit
-
-# colors
-set-option -sa terminal-overrides ",xterm-256color:RGB"
-set-option -g default-terminal "screen-256color"
-
-# history
-set -g history-limit 1000000 # increased
-
-# clipboard
-set -g set-clipboard on
-
-# vi-mode
-set -g status-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'v'   send-keys -X begin-selection
-
-# Open a new pane or window with the current directory of the current pane,
-# not the directory in which the first tmux session was started.
-bind '"' split-window -c  "#{pane_current_path}"
-bind %   split-window -ch "#{pane_current_path}"
-bind c   new-window   -c  "#{pane_current_path}"
-
-# mouse
-set -g mouse on
-bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
-bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
-
-# TODO: make into tpm plugin
-set-option -g automatic-rename-format "#(tmux-icon-name #{pane_current_command})"
+bind-key -n DoubleClick1Status new-window  # double click opens a new window
+bind-key -n MouseUp2Status kill-window -t= # middle click on status bar closes window
+bind-key x kill-pane                       # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
 # plugins' configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
@@ -87,8 +61,5 @@ set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tpm'
-
-# TODO: decide if I want to use this
-# set -g @plugin 'carlocab/tmux-nvr'
 
 run '~/.tmux/plugins/tpm/tpm' # always at end of file
