--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,39 +1,40 @@
-#               _________  _____ ______   ___  ___    ___    ___ 
-#              |\___   ___\\   _ \  _   \|\  \|\  \  |\  \  /  /|
-#              \|___ \  \_\ \  \\\__\ \  \ \  \\\  \ \ \  \/  / /
-#                   \ \  \ \ \  \\|__| \  \ \  \\\  \ \ \    / /
-#                    \ \  \ \ \  \    \ \  \ \  \\\  \ \/    \/
-#   'tmux/tmux'       \ \__\ \ \__\    \ \__\ \_______\/  /\  \
-#                      \|__|  \|__|     \|__|\|_______/__/ /\__\
-#                                                     |__|/ \__|
 
-set -g base-index 1              # start indexing windows at 1 instead of 0
-set -g detach-on-destroy off     # don't exit from tmux when closing a session 
-set -g escape-time 0             # zero-out escape time delay
-set -g history-limit 1000000     # significantly increase history size
-set -g mouse on                  # enable mouse support
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-base-index 1         # start indexing panes at 1 instead of 0
-set -g pane-border-style 'fg=brightblack,bg=default'
-set -g renumber-windows on       # renumber all windows when any window is closed
-set -g set-clipboard on          # use system clipboard
-set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -timeout 200ms -cfg $HOME/.config/tmux/gitmux.conf)' # session name
-set -g status-left-length 200    # increase status line length
-set -g status-position top       # macOS / darwin style
-set -g status-right ''           # empty
-set -g status-style 'bg=default' # transparent bg
-set -g window-status-current-format '#[fg=magenta,bold,bg=default]#W'
-set -g window-status-format         '#[fg=white,bg=default]#W'
+# ████████╗███╗   ███╗██╗   ██╗██╗  ██╗
+# ╚══██╔══╝████╗ ████║██║   ██║╚██╗██╔╝
+#    ██║   ██╔████╔██║██║   ██║ ╚███╔╝ 
+#    ██║   ██║╚██╔╝██║██║   ██║ ██╔██╗ 
+#    ██║   ██║ ╚═╝ ██║╚██████╔╝██╔╝ ██╗
+#    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
+#   'tmux/tmux' - terminal multiplexer
 
-set-option -g  automatic-rename-format "#(tmux-icon-name #{pane_current_command})" # renames windows
-set-option -g  default-terminal    'screen-256color'
-set-option -g  status-interval     1 # decrease interval timing
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set -g base-index 1           # start indexing windows at 1 instead of 0
+set -g detach-on-destroy off  # don't exit from tmux when closing a session 
+set -g escape-time 0          # zero-out escape time delay
+set -g history-limit 1000000  # significantly increase history size
+set -g mouse on               # enable mouse support
+set -g pane-base-index 1      # start indexing panes at 1 instead of 0
+set -g renumber-windows on    # renumber all windows when any window is closed
+set -g set-clipboard on       # use system clipboard
+set -g status-left-length 200 # increase status line length
+set -g status-position top    # macOS / darwin style
+set -g status-right ''        # empty
 
-bind %   split-window -c '#{pane_current_path}' # default is tmux session root 
-bind '"' split-window -c '#{pane_current_path}' # default is tmux session root 
-bind c   new-window   -c '#{pane_current_path}' # default is tmux session root 
-bind g   new-window   -c '#{pane_current_path}' -n '' lazygit
+set -g pane-active-border-style     '#[fg=magenta,bg=default]'
+set -g pane-border-style            '#[fg=brightblack,bg=default]'
+set -g status-left                  '#[fg=blue,bold]#S#[fg=white,nobold]#(gitmux -timeout 200ms -cfg $HOME/.config/tmux/gitmux.conf)' # session name
+set -g status-style                 '#[bg=default]' # transparent
+set -g window-status-current-format '#[fg=magenta]#W'
+set -g window-status-format         '#[fg=gray]#W'
+
+set-option -g automatic-rename-format '#(tmux-icon-name #{pane_current_command})'
+set-option -g default-terminal        'screen-256color'
+set-option -g status-interval         1
+set-option -g terminal-overrides      ',xterm-256color:RGB'
+
+bind %   split-window -c '#{pane_current_path}'
+bind '"' split-window -c '#{pane_current_path}'
+bind c   new-window   -c '#{pane_current_path}'
+bind g   new-window   -n '' lazygit
 bind h   select-pane  -L
 bind j   select-pane  -D
 bind k   select-pane  -U
@@ -49,12 +50,10 @@ bind-key -n DoubleClick1Status new-window  # double click opens a new window
 bind-key -n MouseUp2Status kill-window -t= # middle click on status bar closes window
 bind-key x kill-pane                       # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
-# plugins' configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 set -g @fzf-url-fzf-options '-w 50% -h 50% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 
-# plugins
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
