feat: adjust gitmux placement in config

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -21,14 +21,16 @@ set -g status-right ''        # empty
 
 set -g pane-active-border-style     '#[fg=magenta,bg=default]'
 set -g pane-border-style            '#[fg=brightblack,bg=default]'
-set -g status-left                  '#[fg=blue,bold]#S#[fg=white,nobold]#(gitmux -timeout 200ms -cfg $HOME/.config/tmux/gitmux.conf)' # session name
 set -g status-style                 '#[bg=default]' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format         '#[fg=gray]#W'
 
+# session name + git status 'arl/gitmux'
+set -g status-left '#[fg=blue,bold]#S#[fg=white,nobold]#(gitmux -timeout 200ms -cfg $HOME/.config/tmux/gitmux.conf)'
+set -g status-interval 2 # update status every 2 seconds
+
 set-option -g automatic-rename-format '#(tmux-icon-name #{pane_current_command})'
 set-option -g default-terminal        'screen-256color'
-set-option -g status-interval         1
 set-option -g terminal-overrides      ',xterm-256color:RGB'
 
 bind %   split-window -c '#{pane_current_path}'
