--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -18,7 +18,7 @@ tmux:
     modified: '#[fg=yellow,nobold]'
     untracked: '#[fg=gray,nobold]'
     stashed: '#[fg=gray,nobold]'
-    clean: '#[fg=brightblack,nobold]'
+    clean: '#[fg=green,nobold]'
     divergence: '#[fg=cyan,nobold]'
   layout: [branch, divergence, ' ', flags, ' ']
   options:
