--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -19,9 +19,9 @@ set -g status-left-length 200 # increase status line length
 set -g status-position top    # macOS / darwin style
 set -g status-right ''        # empty
 
-set -g pane-active-border-style     '#[fg=magenta,bg=default]'
-set -g pane-border-style            '#[fg=brightblack,bg=default]'
-set -g status-style                 '#[bg=default]' # transparent
+set -g pane-active-border-style     'fg=magenta,bg=default'
+set -g pane-border-style            'fg=brightblack,bg=default'
+set -g status-style                 'bg=default' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format         '#[fg=gray]#W'
 
