--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -33,7 +33,7 @@ set-option -g automatic-rename-format '#(tmux-icon-name #{pane_current_command})
 set-option -g default-terminal        'screen-256color'
 set-option -g terminal-overrides      ',xterm-256color:RGB'
 
-bind %   split-window -c '#{pane_current_path}'
+bind %   split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c   new-window   -c '#{pane_current_path}'
 bind g   new-window   -n '' lazygit
