feat: adjust tmux

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -12,12 +12,15 @@ set -g detach-on-destroy off  # don't exit from tmux when closing a session
 set -g escape-time 0          # zero-out escape time delay
 set -g history-limit 1000000  # significantly increase history size
 set -g mouse on               # enable mouse support
-set -g pane-base-index 1      # start indexing panes at 1 instead of 0
 set -g renumber-windows on    # renumber all windows when any window is closed
 set -g set-clipboard on       # use system clipboard
+set -g status-interval 2      # update status every 2 seconds
 set -g status-left-length 200 # increase status line length
 set -g status-position top    # macOS / darwin style
 set -g status-right ''        # empty
+
+# session name + git status 'arl/gitmux'
+set -g status-left '#[fg=blue,bold]#S#[fg=white,nobold]#(gitmux -timeout 200ms -cfg $HOME/.config/tmux/gitmux.conf) '
 
 set -g pane-active-border-style     'fg=magenta,bg=default'
 set -g pane-border-style            'fg=brightblack,bg=default'
@@ -25,15 +28,11 @@ set -g status-style                 'bg=default' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format         '#[fg=gray]#W'
 
-# session name + git status 'arl/gitmux'
-set -g status-left '#[fg=blue,bold]#S#[fg=white,nobold]#(gitmux -timeout 200ms -cfg $HOME/.config/tmux/gitmux.conf) '
-set -g status-interval 2 # update status every 2 seconds
-
 set-option -g automatic-rename-format '#(tmux-icon-name #{pane_current_command})'
 set-option -g default-terminal        'screen-256color'
 set-option -g terminal-overrides      ',xterm-256color:RGB'
 
-bind %   split-window -c '#{pane_current_path}' -h
+bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c   new-window   -c '#{pane_current_path}'
 bind g   new-window   -n '' lazygit
@@ -48,19 +47,14 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'v'   send-keys -X begin-selection
-bind-key -n DoubleClick1Status new-window  # double click opens a new window
-bind-key -n MouseUp2Status kill-window -t= # middle click on status bar closes window
-bind-key x kill-pane                       # skip "kill-pane 1? (y/n)" prompt (cmd+w)
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
-set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 set -g @fzf-url-fzf-options '-w 50% -h 50% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 
-set -g @plugin 'akohlbecker/aw-watcher-tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tpm'
 
 run '~/.tmux/plugins/tpm/tpm' # always at end of file
