feat: make clean empty

--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -9,7 +9,7 @@ tmux:
     untracked: ' '
     modified: ' '
     stashed: ' '
-    clean: ''
+    clean: ''
   styles:
     state: '#[fg=red,nobold]'
     branch: '#[fg=white,nobold]'
