feat[gitmux]: add stats

--- a/.config/tmux/gitmux.conf
+++ b/.config/tmux/gitmux.conf
@@ -20,6 +20,8 @@ tmux:
     modified: ' '
     stashed: ' '
     clean: ''
+    insertions: ' '
+    deletions: ' '
   styles:
     state: '#[fg=red,nobold]'
     branch: '#[fg=white,nobold]'
@@ -30,6 +32,6 @@ tmux:
     stashed: '#[fg=gray,nobold]'
     clean: '#[fg=green,nobold]'
     divergence: '#[fg=cyan,nobold]'
-  layout: [branch, divergence, ' ', flags, ' ']
+  layout: [branch, divergence, ' ', flags, ' ', stats, ' ']
   options:
     branch_max_len: 0
