--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,14 +28,13 @@ set -g status-style                 'bg=default' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format         '#[fg=gray]#W'
 
-set-option -g automatic-rename-format '#(tmux-icon-name #{pane_current_command})'
 set-option -g default-terminal        'screen-256color'
 set-option -g terminal-overrides      ',xterm-256color:RGB'
 
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c   new-window   -c '#{pane_current_path}'
-bind g   new-window   -n '' lazygit
+bind g   new-window   -n '' lazygit
 bind h   select-pane  -L
 bind j   select-pane  -D
 bind k   select-pane  -U
