--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,6 +7,7 @@
 #    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 # Terminal multiplexer
 # https://github.com/tmux/tmux
+# cSpell:words christoomey joshmedeski lazygit brightblack nobold gitmux
 
 set -g base-index 1           # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off  # don't exit from tmux when closing a session 
@@ -53,6 +54,7 @@ set -g @fzf-url-history-limit '2000'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'tmux-plugins/tpm'
 
