--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -49,13 +49,16 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'v'   send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
-set -g @fzf-url-fzf-options '-w 50% -h 50% --prompt="   " --border-label=" Open URL "'
+# TODO: add fzf options for t
+# set -g @t-fzf-options '-p 70%,30% --prompt=" "'
+
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'tmux-plugins/tpm'
 
 run '~/.tmux/plugins/tpm/tpm' # always at end of file
