feat: update gitmux config

--- a/.config/tmux/gitmux.conf
+++ b/.config/tmux/gitmux.conf
@@ -10,7 +10,7 @@
 
 tmux:
   symbols:
-    branch: ' שׂ '
+    branch: 'שׂ '
     hashprefix: ':'
     ahead: ' '
     behind: ' '
@@ -19,7 +19,7 @@ tmux:
     untracked: ' '
     modified: ' '
     stashed: ' '
-    clean: ''
+    clean: 'c'
     insertions: ' '
     deletions: ' '
   styles:
@@ -32,6 +32,7 @@ tmux:
     stashed: '#[fg=gray,nobold]'
     clean: '#[fg=green,nobold]'
     divergence: '#[fg=cyan,nobold]'
-  layout: [branch, divergence, ' ', flags, ' ', stats]
+  layout: [branch, divergence, flags, stats]
   options:
     branch_max_len: 0
+    hide_clean: true
