feat: update tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,13 +21,14 @@ set -g status-left-length 200 # increase status line length
 set -g status-position top    # macOS / darwin style
 set -g status-right ''        # empty
 
-set -g status-left                  '#[fg=blue,bold]#S'
-set -ga status-left                 '#[fg=white,nobold]#(gitmux -timeout 200ms -cfg $HOME/.config/tmux/gitmux.conf) '
 set -g pane-active-border-style     'fg=magenta,bg=default'
 set -g pane-border-style            'fg=brightblack,bg=default'
 set -g status-style                 'bg=default' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format         '#[fg=gray]#W'
+
+set -g status-left  '#[fg=blue,bold]#S #[fg=white,nobold]'
+set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'
 
 set-option -g default-terminal        'screen-256color'
 set-option -g terminal-overrides      ',xterm-256color:RGB'
@@ -53,6 +54,7 @@ bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 # set -g @t-fzf-options '-p 70%,30% --prompt=" "'
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @t-fzf-prompt '  '
 set -g @fzf-url-history-limit '2000'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
