fix: add trailing space to gitmux layout

--- a/.config/tmux/gitmux.conf
+++ b/.config/tmux/gitmux.conf
@@ -32,7 +32,7 @@ tmux:
     stashed: '#[fg=gray,nobold]'
     clean: '#[fg=green,nobold]'
     divergence: '#[fg=cyan,nobold]'
-  layout: [branch, divergence, flags, stats]
+  layout: [branch, divergence, flags, stats, ' ']
   options:
     branch_max_len: 0
     hide_clean: true
