feat: update colors

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,3 @@
-
 # ████████╗███╗   ███╗██╗   ██╗██╗  ██╗
 # ╚══██╔══╝████╗ ████║██║   ██║╚██╗██╔╝
 #    ██║   ██╔████╔██║██║   ██║ ╚███╔╝
@@ -10,7 +9,7 @@
 # cSpell:words christoomey joshmedeski lazygit brightblack nobold gitmux
 
 set -g base-index 1           # start indexing windows at 1 instead of 0
-set -g detach-on-destroy off  # don't exit from tmux when closing a session 
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
 set -g escape-time 0          # zero-out escape time delay
 set -g history-limit 1000000  # significantly increase history size
 set -g mouse on               # enable mouse support
@@ -21,39 +20,40 @@ set -g status-left-length 200 # increase status line length
 set -g status-position top    # macOS / darwin style
 set -g status-right ''        # empty
 
-set -g pane-active-border-style     'fg=magenta,bg=default'
-set -g pane-border-style            'fg=brightblack,bg=default'
-set -g status-style                 'bg=default' # transparent
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+set -g status-style 'bg=default' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
-set -g window-status-format         '#[fg=gray]#W'
+set -g window-status-format '#[fg=gray]#W'
+set -g mode-style bg=default,fg=magenta
 
-set -g status-left  '#[fg=blue,bold]#S #[fg=white,nobold]'
-set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'
+set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
+set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 
-set-option -g default-terminal        'screen-256color'
-set-option -g terminal-overrides      ',xterm-256color:RGB'
+set-option -g default-terminal 'screen-256color'
+set-option -g terminal-overrides ',xterm-256color:RGB'
 
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
-bind c   new-window   -c '#{pane_current_path}'
-bind g   new-window   -n '' lazygit
-bind h   select-pane  -L
-bind j   select-pane  -D
-bind k   select-pane  -U
-bind l   select-pane  -R
+bind c new-window -c '#{pane_current_path}'
+bind g new-window -n '' lazygit
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'v'   send-keys -X begin-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
 # TODO: add fzf options for t
 # set -g @t-fzf-options '-p 70%,30% --prompt=" "'
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @tmux-nerd-font-window-name-show-name false
 set -g @t-fzf-prompt '  '
 set -g @fzf-url-history-limit '2000'
 
@@ -63,4 +63,4 @@ set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'tmux-plugins/tpm'
 
-run '~/.tmux/plugins/tpm/tpm' # always at end of file
+run "$HOME/.tmux/plugins/tpm/tpm" # always at end of file
