--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -8,8 +8,6 @@
 # A cross-platform, OpenGL terminal emulator.
 # https://alacritty.org
 
-live_config_reload: true
-
 env:
   TERM: xterm-256color
 
@@ -17,55 +15,59 @@ font:
   normal:
     family: "SFMono Nerd Font"
     style: Medium
-  size: 22.0
+  size: 20.0
 
-window:
-  opacity: 0.8
-  padding:
-    x: 14
-    y: 10
-  dynamic_padding: false
-  decorations: buttonless
+import:
+  - ~/.config/alacritty/aw/current.yml
 
 # NOTE: helpful hex codes
 # \x1b = escape (useful for vim-related keybindings)
 # \x02 = control-b (the default tmux prefix)
 
 key_bindings:
-  - { key: Key1, mods: Command, chars: "\x021" } # select tmux window 1
-  - { key: Key2, mods: Command, chars: "\x022" } #                ... 2
-  - { key: Key3, mods: Command, chars: "\x023" } #                ... 3
-  - { key: Key4, mods: Command, chars: "\x024" } #                ... 4
-  - { key: Key5, mods: Command, chars: "\x025" } #                ... 5
-  - { key: Key6, mods: Command, chars: "\x026" } #                ... 6
-  - { key: Key7, mods: Command, chars: "\x027" } #                ... 7
-  - { key: Key8, mods: Command, chars: "\x028" } #                ... 8
-  - { key: Key9, mods: Command, chars: "\x029" } #                ... 9
-  - { key: Comma, mods: Command, chars: "\x02," } # rename the current tmux window
-  - { key: E, mods: Command, chars: "\x02\"" } # split tmux window vertically
-  - { key: E, mods: Command|Shift, chars: "\x02%" } # split tmux window horizontally
-  - { key: F, mods: Command|Shift, chars: "\x02\x5b\x2f" } # start tmux search mode
-  - { key: F, mods: Command, chars: "lfcd\n" } # open file manager 'gokcehan/lf'
-  - { key: G, mods: Command, chars: "\x02g" } # open git manager 'jesseduffield/lazygit'
-  - { key: J, mods: Command, chars: "\x02\x54" } # open t - tmux smart session manager
-  - { key: K, mods: Command, chars: "\x02s" } # open interactive tmux session client
-  - { key: L, mods: Command, chars: "\x02L" } # switch to the last tmux session
-  - { key: LBracket, mods: Command, chars: "\x0f" } # navigate back (ctrl+o)
-  - { key: LBracket, mods: Command|Shift, chars: "\x02p" } # switch to next tmux window
-  - { key: O, mods: Command, chars: "\x02u" }
-  - { key: P, mods: Command, chars: ":GoToFile\n" } # files
-  - { key: P, mods: Command|Shift, chars: ":GoToCommand\n" } # commands
+  - { chars: "\x021", key: Key1, mods: Command } # select tmux window 1
+  - { chars: "\x022", key: Key2, mods: Command } #                ... 2
+  - { chars: "\x023", key: Key3, mods: Command } #                ... 3
+  - { chars: "\x024", key: Key4, mods: Command } #                ... 4
+  - { chars: "\x025", key: Key5, mods: Command } #                ... 5
+  - { chars: "\x026", key: Key6, mods: Command } #                ... 6
+  - { chars: "\x027", key: Key7, mods: Command } #                ... 7
+  - { chars: "\x028", key: Key8, mods: Command } #                ... 8
+  - { chars: "\x029", key: Key9, mods: Command } #                ... 9
+  - { chars: "\x02,", key: Comma, mods: Command } # rename the current tmux window
+  - { chars: "\x02\"", key: E, mods: Command } # split tmux window vertically
+  - { chars: "\x02%", key: E, mods: Command|Shift } # split tmux window horizontally
+  - { chars: "\x02\x5b\x2f", key: F, mods: Command|Shift } # start tmux search mode
+  - { chars: "lfcd\n", key: F, mods: Command } # open file manager 'gokcehan/lf'
+  - { chars: "\x02g", key: G, mods: Command } # open git manager 'jesseduffield/lazygit'
+  - { chars: "\x02\x54", key: J, mods: Command } # open t - tmux smart session manager
+  - { chars: "\x02s", key: K, mods: Command } # open interactive tmux session client
+  - { chars: "clear\n", key: K, mods: Command|Shift } # open interactive tmux session client
+  - { chars: "\x02L", key: L, mods: Command } # switch to the last tmux session
+  - { chars: "\x0f", key: LBracket, mods: Command } # navigate back (ctrl+o)
+  - { chars: "\x02p", key: LBracket, mods: Command|Shift } # switch to next tmux window
+  - { chars: "\x02u", key: O, mods: Command }
+  - { chars: ":GoToFile\n", key: P, mods: Command } # files
+  - { chars: ":GoToCommand\n", key: P, mods: Command|Shift } # commands
   # - { key: Period, mods: Command, chars: "\x1b\x20\x2e\x0a" } (causes popup to be unfocused)
-  - { key: Q, mods: Command, chars: ":q\n" } # quit vim
-  - { key: R, mods: Command, chars: "\x1b\x5b\x41\x0a" }
-  - { key: RBracket, mods: Command, chars: "\x09" }
-  - { key: RBracket, mods: Command|Shift, chars: "\x02n" }
-  - { key: S, mods: Command, chars: "\x1b\x3a\x77\x0a" } # save vim buffer
-  - { key: S, mods: Command|Shift, chars: ":wa\n" } # save all
-  - { key: Semicolon, mods: Command, chars: "\x02:" } # enter the tmux command prompt
-  - { key: T, mods: Command, chars: "\x02c" } # create a new tmux window
-  - { key: W, mods: Command, chars: "\x02x" } # kill the current pane
-  - { key: Z, mods: Command, chars: "\x02z" } # toggle zoom state of the current tmux pane
+  - { chars: ":q\n", key: Q, mods: Command } # quit vim
+  - { chars: "\x1b\x5b\x41\x0a", key: R, mods: Command }
+  - { chars: "^R", key: R, mods: Command|Shift }
+  - { chars: "\x09", key: RBracket, mods: Command }
+  - { chars: "\x02n", key: RBracket, mods: Command|Shift }
+  - { chars: "\x1b\x3a\x77\x0a", key: S, mods: Command } # save vim buffer
+  - { chars: ":wa\n", key: S, mods: Command|Shift } # save all
+  - { chars: "\x02:", key: Semicolon, mods: Command } # enter the tmux command prompt
+  - { chars: "\x02c", key: T, mods: Command } # create a new tmux window
+  - { chars: "\x02x", key: W, mods: Command } # kill the current pane
+  - { chars: "\x02z", key: Z, mods: Command } # toggle zoom state of the current tmux pane
 
-import:
-  - ~/.config/alacritty/aw/current.yml
+live_config_reload: true
+
+window:
+  decorations: buttonless
+  dynamic_padding: false
+  opacity: 0.8
+  padding:
+    x: 14
+    y: 10
