--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,7 +25,9 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 set -g status-style 'bg=default' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format '#[fg=gray]#W'
-set -g mode-style bg=default,fg=magenta
+set -g mode-style bg=default,fg=white
+set -g message-style bg=default,fg=white
+set -g message-command-style bg=default,fg=yellow
 
 set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
 set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
