--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -32,6 +32,30 @@ window:
 # \x02 = control-b (the default tmux prefix)
 
 key_bindings:
+  - { key: E, mods: Command, chars: "\x02\"" } # split tmux window vertically
+  - { key: E, mods: Command|Shift, chars: "\x02%" } # split tmux window horizontally
+  - { key: F, mods: Command, chars: "lfcd\n" } # open file manager 'gokcehan/lf'
+  - { key: F, mods: Command|Shift, chars: "\x02\x5b\x2f" } # start tmux search mode
+  - { key: G, mods: Command, chars: "\x02g" } # open git manager 'jesseduffield/lazygit'
+  - { key: J, mods: Command, chars: "\x02\x54" } # open t - tmux smart session manager
+  - { key: K, mods: Command, chars: "\x02s" } # open interactive tmux session client
+  - { key: L, mods: Command, chars: "\x02L" } # switch to the last tmux session
+  - { key: O, mods: Command, chars: "\x02u" } # open URL
+  - { key: P, mods: Command, chars: ":GoToFile\n" } # files
+  - { key: P, mods: Command|Shift, chars: ":GoToCommand\n" } # commands
+  - { key: Q, mods: Command, chars: ":q\n" } # quit vim
+  - { key: S, mods: Command, chars: "\x1b\x3a\x77\x0a" } # save vim buffer
+  - { key: T, mods: Command, chars: "\x02c" } # create a new tmux window
+  - { key: W, mods: Command, chars: "\x02x" } # kill the current pane
+  - { key: Z, mods: Command, chars: "\x02z" } # toggle zoom state of the current tmux pane
+  - { key: Tab, mods: Control, chars: "\x02n" } # switch to next tmux window
+  - { key: Grave, mods: Control, chars: "\x02p" } # switch to previous tmux window
+  - { key: Comma, mods: Command, chars: "\x02," } # rename the current tmux window
+  - { key: LBracket, mods: Command, chars: "\x0f" } # navigate back in vim (ctrl+o)
+  - { key: LBracket, mods: Command|Shift, chars: "\x02p" } # switch to next tmux window
+  - { key: RBracket, mods: Command, chars: "\x09" } # navigate forward in vim (ctrl+i)
+  - { key: RBracket, mods: Command|Shift, chars: "\x02n" } # switch to previous tmux window
+  - { key: Semicolon, mods: Command, chars: "\x02:" } # enter the tmux command prompt
   - { key: Key1, mods: Command, chars: "\x021" } # select tmux window 1
   - { key: Key2, mods: Command, chars: "\x022" } #                ... 2
   - { key: Key3, mods: Command, chars: "\x023" } #                ... 3
@@ -41,32 +65,6 @@ key_bindings:
   - { key: Key7, mods: Command, chars: "\x027" } #                ... 7
   - { key: Key8, mods: Command, chars: "\x028" } #                ... 8
   - { key: Key9, mods: Command, chars: "\x029" } #                ... 9
-  - { key: Comma, mods: Command, chars: "\x02," } # rename the current tmux window
-  - { key: E, mods: Command, chars: "\x02\"" } # split tmux window vertically
-  - { key: E, mods: Command|Shift, chars: "\x02%" } # split tmux window horizontally
-  - { key: F, mods: Command|Shift, chars: "\x02\x5b\x2f" } # start tmux search mode
-  - { key: F, mods: Command, chars: "lfcd\n" } # open file manager 'gokcehan/lf'
-  - { key: G, mods: Command, chars: "\x02g" } # open git manager 'jesseduffield/lazygit'
-  - { key: J, mods: Command, chars: "\x02\x54" } # open t - tmux smart session manager
-  - { key: K, mods: Command, chars: "\x02s" } # open interactive tmux session client
-  - { key: L, mods: Command, chars: "\x02L" } # switch to the last tmux session
-  - { key: LBracket, mods: Command, chars: "\x0f" } # navigate back (ctrl+o)
-  - { key: LBracket, mods: Command|Shift, chars: "\x02p" } # switch to next tmux window
-  - { key: Tab, mods: Control, chars: "\x02n" } # select tmux window 1
-  - { key: Grave, mods: Control, chars: "\x02p" } # select tmux window 1
-  - { key: O, mods: Command, chars: "\x02u" }
-  - { key: P, mods: Command, chars: ":GoToFile\n" } # files
-  - { key: P, mods: Command|Shift, chars: ":GoToCommand\n" } # commands
-  - { key: Q, mods: Command, chars: ":q\n" } # quit vim
-  - { key: R, mods: Command, chars: "\x1b\x5b\x41\x0a" }
-  - { key: RBracket, mods: Command, chars: "\x09" }
-  - { key: RBracket, mods: Command|Shift, chars: "\x02n" }
-  - { key: S, mods: Command, chars: "\x1b\x3a\x77\x0a" } # save vim buffer
-  - { key: S, mods: Command|Shift, chars: ":wa\n" } # save all
-  - { key: Semicolon, mods: Command, chars: "\x02:" } # enter the tmux command prompt
-  - { key: T, mods: Command, chars: "\x02c" } # create a new tmux window
-  - { key: W, mods: Command, chars: "\x02x" } # kill the current pane
-  - { key: Z, mods: Command, chars: "\x02z" } # toggle zoom state of the current tmux pane
 
 import:
   - ~/.config/alacritty/aw/current.yml
