--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -40,7 +40,7 @@ key_bindings:
   - { key: J, mods: Command, chars: "\x02\x54" } # open t - tmux smart session manager
   - { key: K, mods: Command, chars: "\x02s" } # open interactive tmux session client
   - { key: L, mods: Command, chars: "\x02L" } # switch to the last tmux session
-  - { key: O, mods: Command, chars: "\x02u" } # open URL
+  - { key: O, mods: Command, chars: "\x02u" } # open URLs 'joshmedeski/tmux-fzf-url'
   - { key: P, mods: Command, chars: ":GoToFile\n" } # files
   - { key: P, mods: Command|Shift, chars: ":GoToCommand\n" } # commands
   - { key: Q, mods: Command, chars: ":q\n" } # quit vim
