feat[tmux]: turn focuse events on

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -34,6 +34,7 @@ set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -g focus-events on
 
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
