--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ Library/Preferences/us.zoom.Transcode.plist
 Library/Preferences/us.zoom.ZoomAutoUpdater.plist
 Library/Preferences/us.zoom.xos.Hotkey.plist
 Library/Preferences/us.zoom.xos.plist
+Library/Application Support/com.elgato.StreamDeck/Sentry
+Library/Application Support/com.elgato.StreamDeck/STREAMDECKINTERNALSHM
