--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,7 +6,7 @@
 #    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 # Terminal multiplexer
 # https://github.com/tmux/tmux
-# cSpell:words christoomey joshmedeski lazygit brightblack nobold gitmux
+# cSpell:words christoomey joshmedeski lazygit brightblack nobold gitmux olimorris
 
 set -g base-index 1           # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off  # don't exit from tmux when closing a session
@@ -18,8 +18,7 @@ set -g set-clipboard on       # use system clipboard
 set -g status-interval 2      # update status every 2 seconds
 set -g status-left-length 200 # increase status line length
 set -g status-position top    # macOS / darwin style
-set -g status-right ''        # empty
-
+set -g status-right "#{pomodoro_status}"
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 set -g status-style 'bg=default' # transparent
@@ -57,11 +56,16 @@ set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open 
 set -g @tmux-nerd-font-window-name-show-name false
 set -g @t-fzf-prompt '  '
 set -g @fzf-url-history-limit '2000'
+set -g @pomodoro_on " 🍅"       # The formatted output when the pomodoro is running
+set -g @pomodoro_complete " ✅" # The formatted output when the pomodoro is finished
+set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
+set -g @pomodoro_cancel '-'    # Cancel a Pomodoro with tmux-prefix key + P
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'tmux-plugins/tpm'
 
 run "$HOME/.tmux/plugins/tpm/tpm" # always at end of file
