feat: use starship default shell icon as nerd font tmux window

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -54,6 +54,7 @@ bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @tmux-nerd-font-window-name-show-name false
+set -g @tmux-nerd-font-window-name-shell-icon ""
 set -g @t-fzf-prompt '  '
 set -g @fzf-url-history-limit '2000'
 set -g @pomodoro_on " 🍅"       # The formatted output when the pomodoro is running
