--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -56,6 +56,7 @@ set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open 
 set -g @tmux-nerd-font-window-name-show-name false
 set -g @tmux-nerd-font-window-name-shell-icon ""
 set -g @t-fzf-prompt '  '
+set -g @t-bind 'T'
 set -g @fzf-url-history-limit '2000'
 set -g @pomodoro_on " 🍅"       # The formatted output when the pomodoro is running
 set -g @pomodoro_complete " ✅" # The formatted output when the pomodoro is finished
