--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,32 +8,31 @@
 # https://github.com/tmux/tmux
 # cSpell:words christoomey joshmedeski lazygit brightblack nobold gitmux olimorris
 
+set-option -g default-terminal 'screen-256color'
+set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -g focus-events on
+
 set -g base-index 1           # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off  # don't exit from tmux when closing a session
 set -g escape-time 0          # zero-out escape time delay
 set -g history-limit 1000000  # significantly increase history size
+set -g message-command-style bg=default,fg=yellow
+set -g message-style bg=default,fg=yellow
+set -g mode-style bg=default,fg=yellow
 set -g mouse on               # enable mouse support
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
 set -g renumber-windows on    # renumber all windows when any window is closed
 set -g set-clipboard on       # use system clipboard
-set -g status-interval 2      # update status every 2 seconds
+set -g status-interval 3      # update the status bar every 3 seconds
+set -g status-left "#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 set -g status-left-length 200 # increase status line length
 set -g status-position top    # macOS / darwin style
 set -g status-right "#{pomodoro_status}"
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
+set -g status-right-length 4
 set -g status-style 'bg=default' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format '#[fg=gray]#W'
-set -g mode-style bg=default,fg=yellow
-set -g message-style bg=default,fg=yellow
-set -g message-command-style bg=default,fg=yellow
-
-set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
-set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
-
-set-option -g default-terminal 'screen-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
-set-option -g focus-events on
 
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
