--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -42,8 +42,8 @@ key_bindings:
   - { key: K, mods: Command, chars: "\x02s" } # open interactive tmux session client
   - { key: L, mods: Command, chars: "\x02L" } # switch to the last tmux session
   - { key: O, mods: Command, chars: "\x02u" } # open URLs 'joshmedeski/tmux-fzf-url'
-  - { key: P, mods: Command, chars: ":GoToFile\n" } # files
-  - { key: P, mods: Command|Shift, chars: ":GoToCommand\n" } # commands
+  - { key: P, mods: Command, chars: ":GoToFile\n" } # go to file
+  - { key: P, mods: Command|Shift, chars: ":GoToCommand\n" } # run command
   - { key: Q, mods: Command, chars: ":q\n" } # quit vim
   - { key: S, mods: Command, chars: "\x1b\x3a\x77\x0a" } # save vim buffer
   - { key: T, mods: Command, chars: "\x02c" } # create a new tmux window
