--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -39,7 +39,7 @@ key_bindings:
   - { key: G, mods: Command, chars: "\x02g" } # open git manager 'jesseduffield/lazygit'
   - { key: G, mods: Command|Shift, chars: "\x02G" } # open git manager 'jesseduffield/lazygit'
   - { key: J, mods: Command, chars: "\x02\x54" } # open t - tmux smart session manager
-  - { key: K, mods: Command, chars: "\x02s" } # open interactive tmux session client
+  - { key: K, mods: Command, chars: ":GoToCommand\n" } # run command
   - { key: L, mods: Command, chars: "\x02L" } # switch to the last tmux session
   - { key: O, mods: Command, chars: "\x02u" } # open URLs 'joshmedeski/tmux-fzf-url'
   - { key: P, mods: Command, chars: ":GoToFile\n" } # go to file
