refactor: use single quotes for all options

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,7 +25,7 @@ set -g status-interval 3     # update the status bar every 3 seconds
 set -g status-left "#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 set -g status-left-length 200            # increase length (from 10)
 set -g status-position top               # macOS / darwin style
-set -g status-right "#{pomodoro_status}" # toggle 25m pomodoro
+set -g status-right '#{pomodoro_status}' # toggle 25m pomodoro
 set -g status-right-length 6             # decrease length (from 10)
 set -g status-style 'bg=default'         # transparent
 
@@ -57,12 +57,12 @@ bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @tmux-nerd-font-window-name-show-name false
-set -g @tmux-nerd-font-window-name-shell-icon ""
+set -g @tmux-nerd-font-window-name-shell-icon ''
 set -g @t-fzf-prompt '  '
 set -g @t-bind 'T'
 set -g @fzf-url-history-limit '2000'
-set -g @pomodoro_on " 🍅"       # The formatted output when the pomodoro is running
-set -g @pomodoro_complete " ✅" # The formatted output when the pomodoro is finished
+set -g @pomodoro_on ' 🍅'       # The formatted output when the pomodoro is running
+set -g @pomodoro_complete ' ✅' # The formatted output when the pomodoro is finished
 set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
 set -g @pomodoro_cancel '-'    # Cancel a Pomodoro with tmux-prefix key + P
 
