--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -16,7 +16,7 @@ env:
 window:
   decorations: buttonless
   dynamic_padding: false
-  opacity: 0.75
+  opacity: 0.9
   padding:
     x: 14
     y: 10
@@ -78,4 +78,10 @@ key_bindings:
   - { key: Key9, mods: Command, chars: "\x029" } #                ... 9
 
 import:
-  - ~/.config/alacritty/aw/current.yml
+  - ~/.config/alacritty/catppuccin/catppuccin-mocha.yml
+  # - ~/.config/alacritty/catppuccin/catppuccin-macchiato.yml
+  # - ~/.config/alacritty/catppuccin/catppuccin-frappe.yml
+  # - ~/.config/alacritty/catppuccin/catppuccin-latte.yml
+#
+# import:
+#   - ~/.config/alacritty/aw/current.yml
