fix: font rendering by setting default terminal

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,6 +13,7 @@ set-option -g terminal-overrides ',xterm-256color:RGB'
 # TODO: learn how this works
 set-option -g focus-events on
 
+set -g default-terminal "alacritty"
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off # don't exit from tmux when closing a session
 set -g escape-time 0         # zero-out escape time delay
