feat: make divergence yellow to match lazygit

--- a/.config/tmux/gitmux.conf
+++ b/.config/tmux/gitmux.conf
@@ -31,7 +31,7 @@ tmux:
     untracked: '#[fg=gray,nobold]'
     stashed: '#[fg=gray,nobold]'
     clean: '#[fg=green,nobold]'
-    divergence: '#[fg=cyan,nobold]'
+    divergence: '#[fg=yellow,nobold]'
   layout: [branch, divergence, flags, stats, ' ']
   options:
     branch_max_len: 0
