feat: add ability to put tmux buffer in nvim
https://gist.github.com/elijahmanor/9c5e8bc775584bffc322e6c1ad2435dd

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -55,6 +55,7 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
+bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @tmux-nerd-font-window-name-show-name false
