--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -18,8 +18,8 @@ window:
   dynamic_padding: false
   opacity: 0.9
   padding:
-    x: 14
-    y: 10
+    x: 30
+    y: 20
 
 font:
   normal:
@@ -48,7 +48,7 @@ key_bindings:
   - { key: G, mods: Command, chars: "\x02g" } # open git manager 'jesseduffield/lazygit'
   - { key: G, mods: Command|Shift, chars: "\x02G" } # open github dash 'dlvhdr/gh-dash'
   - { key: J, mods: Command, chars: "\x02\x54" } # open t - tmux smart session manager
-  - { key: K, mods: Command, chars: ":GoToCommand\n" } # run command
+  - { key: K, mods: Command, chars: "\x02\x54" } # open t - tmux smart session manager
   - { key: L, mods: Command, chars: "\x02L" } # switch to the last tmux session
   - { key: O, mods: Command, chars: "\x02u" } # open URLs 'joshmedeski/tmux-fzf-url'
   - { key: P, mods: Command, chars: ":GoToFile\n" } # go to file
