feat: update kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,10 +2,11 @@
 # shellcheck disable=SC1001,SC1012
 
 hide_window_decorations yes
-background_opacity 0.8
+background_opacity 0.9
 window_padding_width 14
-font_family SF Mono
+font_family JetBrains Mono
 font_size 22
+disable_ligatures never
 
 map cmd+1 send_text all \x021
 map cmd+2 send_text all \x022
@@ -23,7 +24,7 @@ map cmd+shift+f send_text all \x02\x5b\x2f
 map cmd+f send_text all lfcd\n
 map cmd+g send_text all \x02g
 map cmd+j send_text all \x02\x54
-map cmd+k send_text all \x02s
+map cmd+k send_text all \x02\x54
 map cmd+l send_text all \x02L
 map cmd+[ send_text all \x0f
 map cmd+shift+[ send_text all \x02p
