feat: update kitty config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,10 +2,10 @@
 # shellcheck disable=SC1001,SC1012
 
 hide_window_decorations yes
-background_opacity 0.9
-window_padding_width 14
+background_opacity 0.75
+window_padding_width 25
 font_family JetBrains Mono
-font_size 22
+font_size 24
 disable_ligatures never
 
 map cmd+1 send_text all \x021
@@ -23,6 +23,7 @@ map cmd+shift+e send_text all \x02%
 map cmd+shift+f send_text all \x02\x5b\x2f
 map cmd+f send_text all lfcd\n
 map cmd+g send_text all \x02g
+map cmd+shift+g send_text all \x02G
 map cmd+j send_text all \x02\x54
 map cmd+k send_text all \x02\x54
 map cmd+l send_text all \x02L
@@ -51,7 +52,7 @@ map cmd+z send_text all \x02z
 
 # The basic colors
 foreground           #CAD3F5
-background           #24273A
+background           #000004
 selection_foreground #24273A
 selection_background #F4DBD6
 
@@ -85,7 +86,7 @@ mark3_background #7DC4E4
 # The 16 terminal colors
 
 # black
-color0 #494D64
+color0 #000000
 color8 #5B6078
 
 # red
