--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -69,6 +69,7 @@ set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
 set -g @pomodoro_cancel '-'    # Cancel a Pomodoro with tmux-prefix key + P
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
