feat: adjust tmux settings

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,10 +10,8 @@
 
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
-# TODO: learn how this works
-set-option -g focus-events on
+set-option -g focus-events on # TODO: learn how this works
 
-set -g default-terminal "alacritty"
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off # don't exit from tmux when closing a session
 set -g escape-time 0         # zero-out escape time delay
@@ -23,7 +21,8 @@ set -g renumber-windows on   # renumber all windows when any window is closed
 set -g set-clipboard on      # use system clipboard
 set -g status-interval 3     # update the status bar every 3 seconds
 
-set -g status-left "#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
+set -g status-left "#[fg=blue,bold]#S"
+set -ga status-left " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 set -g status-left-length 200            # increase length (from 10)
 set -g status-position top               # macOS / darwin style
 set -g status-right '#{pomodoro_status}' # toggle 25m pomodoro
@@ -33,6 +32,7 @@ set -g status-style 'bg=default'         # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format '#[fg=gray]#W'
 
+set -g default-terminal "${TERM}"
 set -g message-command-style bg=default,fg=yellow
 set -g message-style bg=default,fg=yellow
 set -g mode-style bg=default,fg=yellow
@@ -58,21 +58,23 @@ bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-set -g @tmux-nerd-font-window-name-show-name false
-set -g @tmux-nerd-font-window-name-shell-icon ''
-set -g @t-fzf-prompt '  '
-set -g @t-bind 'T'
 set -g @fzf-url-history-limit '2000'
-set -g @pomodoro_on ' 🍅'       # The formatted output when the pomodoro is running
-set -g @pomodoro_complete ' ✅' # The formatted output when the pomodoro is finished
-set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
 set -g @pomodoro_cancel '-'    # Cancel a Pomodoro with tmux-prefix key + P
+set -g @pomodoro_complete ' ✅' # The formatted output when the pomodoro is finished
+set -g @pomodoro_on ' 🍅'       # The formatted output when the pomodoro is running
+set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
+set -g @t-bind 'T'
+set -g @t-fzf-prompt '  '
+set -g @tmux-last-prompt-pattern ' '
+set -g @tmux-nerd-font-window-name-shell-icon ''
+set -g @tmux-nerd-font-window-name-show-name false
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'mskelton/tmux-last'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'tmux-plugins/tpm'
 
