feat: use X icon for starship

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -10,7 +10,7 @@
 
 [character]
 success_symbol = "[](white)"
-error_symbol = "[](red)"
+error_symbol = "[](red)"
 vicmd_symbol = "[](green)"
 
 # [directory.substitutions]
