feat: update docker config

--- a/.docker/config.json
+++ b/.docker/config.json
@@ -1,9 +1,8 @@
 {
-  "auths": {
-    "https://index.docker.io/v1/": {}
-  },
-  "credsStore": "desktop",
-  "currentContext": "default",
-  "experimental": "enabled",
-  "stackOrchestrator": "swarm"
+	"auths": {
+		"https://index.docker.io/v1/": {}
+	},
+	"credsStore": "desktop",
+	"experimental": "enabled",
+	"currentContext": "desktop-linux"
 }
